--- a/templates/base.html
+++ b/templates/base.html
@@ -47,13 +47,14 @@
                         </ul>
                     </li>
                 </ul>
-                <form class="d-flex">
+                <!-- to be removed as sight will have no actual cart function -->
+                <!-- <form class="d-flex">
                     <button class="btn btn-outline-dark" type="submit">
                         <i class="bi-cart-fill me-1"></i>
                         Cart
                         <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                     </button>
-                </form>
+                </form> -->
             </div>
         </div>
     </nav>
