Remove index entries to ready for iterating through database

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#!">Start Bootstrap</a>
+            <a class="navbar-brand" href="#!">WBC - Watch bid Central</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -47,7 +47,7 @@
                         </ul>
                     </li>
                 </ul>
-                <!-- to be removed as sight will have no actual cart function -->
+                <!-- TODO be removed as sight will have no actual cart function -->
                 <!-- <form class="d-flex">
                     <button class="btn btn-outline-dark" type="submit">
                         <i class="bi-cart-fill me-1"></i>
