--- a/buy/templates/buy/index.html
+++ b/buy/templates/buy/index.html
@@ -6,39 +6,58 @@
 
 <div class="container px-4 px-lg-5 mt-5">
     <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-
+        {% for listing in listing_list %}
         <!-- List entries Column -->
         <div class="col mb-5">
             <div class="card h-100">
                 <!-- Sale badge-->
-                <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+                <div class="badge bg-dark text-white position-absolute bi bi-heart" style="top: 0.5rem; right: 0.5rem">{{ listing.likes }}</div>
                 <!-- Product image-->
                 <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
                 <!-- Product details-->
                 <div class="card-body p-4">
                     <div class="text-center">
                         <!-- Product name-->
-                        <h5 class="fw-bolder">Special Item</h5>
+                        <h5 class="fw-bolder">{{ listing.title }}</h5>
+                        <h3 class=""> {{ listing.author }}</h3>
                         <!-- Product reviews-->
                         <div class="d-flex justify-content-center small text-warning mb-2">
+                           <!-- TODO removing stars to add in heart for likes -->
+                            <!-- <div class="bi-star-fill"></div>
                             <div class="bi-star-fill"></div>
                             <div class="bi-star-fill"></div>
                             <div class="bi-star-fill"></div>
-                            <div class="bi-star-fill"></div>
-                            <div class="bi-star-fill"></div>
+                            <div class="bi-star-fill"></div> -->
                         </div>
                         <!-- Product price-->
-                        <span class="text-muted text-decoration-line-through">$20.00</span>
-                        $18.00
+                        <span class="text-muted"> {{ listing.current_bid }}</span>
                     </div>
                 </div>
                 <!-- Product actions-->
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View Listing</a></div>
                 </div>
             </div>
         </div>
+        {% if forloop.counter|divisibleby:4 %}
     </div>
+    <div class="row">
+        {% endif %}
+        {% endfor %}
+
+    </div>
+    {% if is_paginated %}
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+            <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREVIOUS</a></li>
+            {% endif %}
+            {% if page_obj.has_next %}
+            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+            {% endif %}
+        </ul>
+    </nav>
+    {% endif %}
 </div>
 
 <!-- index.html content ends here -->
