--- a/buy/templates/buy/refhtml.html
+++ b/buy/templates/buy/refhtml.html
@@ -4,7 +4,7 @@
         <!-- Blog Entries Column -->
         <div class="col-12 mt-3 left">
             <div class="row">
-                {% for post in post_list %}
+                {% for item in post_list %}
                 <div class="col-md-4">
                     <div class="card mb-4">
                         <div class="card-body">
