--- a/buy/templates/buy/index.html
+++ b/buy/templates/buy/index.html
@@ -11,7 +11,8 @@
         <div class="col mb-5">
             <div class="card h-100">
                 <!-- Sale badge-->
-                <div class="badge bg-dark text-white position-absolute bi bi-heart" style="top: 0.5rem; right: 0.5rem">{{ listing.likes }}</div>
+                <div class="badge bg-dark text-white position-absolute bi bi-heart" style="top: 0.5rem; right: 0.5rem">
+                    {{ listing.likes }}</div>
                 <!-- Product image-->
                 <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
                 <!-- Product details-->
@@ -22,7 +23,7 @@
                         <h3 class=""> {{ listing.author }}</h3>
                         <!-- Product reviews-->
                         <div class="d-flex justify-content-center small text-warning mb-2">
-                           <!-- TODO removing stars to add in heart for likes -->
+                            <!-- TODO removing stars to add in heart for likes -->
                             <!-- <div class="bi-star-fill"></div>
                             <div class="bi-star-fill"></div>
                             <div class="bi-star-fill"></div>
@@ -30,7 +31,11 @@
                             <div class="bi-star-fill"></div> -->
                         </div>
                         <!-- Product price-->
-                        <span class="text-muted"> {{ listing.current_bid }}</span>
+                        {% if listing.current_bid %}
+                        <span class="text-muted">€ {{ listing.current_bid }}</span>
+                        {% else %}
+                        <span class="text-muted">€ {{ listing.price }}</span>
+                        {% endif %}
                     </div>
                 </div>
                 <!-- Product actions-->
