--- a/buy/templates/buy/index.html
+++ b/buy/templates/buy/index.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
 
 <!-- index.html content starts here -->
-
-<!-- Header-->
 <!-- top_listings_carousel.html -->
 <!-- TODO  carousel is not call the data, will come back to it -->
 <header class="bg-dark py-5">
@@ -14,10 +13,13 @@
             <div class="carousel-item {% if forloop.first %}active{% endif %}">
                 <div class="col mb-5">
                     <div class="card h-100">
-                        <!-- Sale badge-->
-                        <div class="badge bg-dark text-white position-absolute bi bi-heart"
-                            style="top: 0.5rem; right: 0.5rem">
-                            {{ listing.likes }}</div>
+                        <!-- Likes Button-->
+                        <button id="like-button-{{ listing.id }}" class="like-btn btn btn-dark position-absolute"
+                            data-listing-id="{{ listing.id }}" style="top: 0.5rem; right: 0.5rem">
+                            <i class="bi bi-heart"></i> <span id="likes-count-{{ listing.id }}">{{ listing.likes
+                                }}</span>
+                        </button>
+                        <button class="like-button" data-listing-id="{{ listing.id }}">Like</button>
                         <!-- Product image-->
                         <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
                         <!-- Product details-->
@@ -65,7 +67,7 @@
         <!-- List entries Column -->
         <div class="col mb-5">
             <div class="card h-100">
-                <!-- Sale badge-->
+                <!-- Likes badge-->
                 <div class="badge bg-dark text-white position-absolute bi bi-heart" style="top: 0.5rem; right: 0.5rem">
                     {{ listing.likes }}</div>
                 <!-- Product image-->
@@ -77,15 +79,6 @@
                         <h5 class="fw-bolder">{{ listing.title }}</h5>
                         <h7 class="">Seller: {{ listing.author }}</h3>
                             <h7 class="">Time left: {{ listing.bid_timer }} </h7>
-                            <!-- Product reviews-->
-                            <!-- TODO removing stars to add in heart for likes -->
-                            <!-- <div class="d-flex justify-content-center small text-warning mb-2">
-                            <div class="bi-star-fill"></div>
-                            <div class="bi-star-fill"></div>
-                            <div class="bi-star-fill"></div>
-                            <div class="bi-star-fill"></div>
-                            <div class="bi-star-fill"></div>
-                        </div> -->
                             <!-- Product price if statement to show "Price" if "current_bid" is null-->
                             {% if listing.current_bid %}
                             <span class="text-muted">€ {{ listing.current_bid }}</span>
@@ -97,7 +90,8 @@
                 <!-- Product actions-->
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                     <div class="text-center">
-                        <a href="{% url 'watch_detail' listing.slug %}" class="btn btn-outline-dark mt-auto">View Listing</a>
+                        <a href="{% url 'watch_detail' listing.slug %}" class="btn btn-outline-dark mt-auto">View
+                            Listing</a>
                     </div>
                 </div>
             </div>
@@ -125,4 +119,8 @@
 </div>
 
 <!-- index.html content ends here -->
+{% endblock content %}
+
+{% block extras %}
+<script src="{% static 'js/likes.js' %}"></script>
 {% endblock %}
