--- a/buy/templates/buy/index.html
+++ b/buy/templates/buy/index.html
@@ -13,7 +13,7 @@
             <div class="carousel-item {% if forloop.first %}active{% endif %}">
                 <div class="col mb-5">
                     <div class="card h-100">
-                        <!-- Likes Button-->
+                        <!-- Likes Button i want to see if this is updating-->
                         <button id="like-button-{{ listing.id }}" class="like-btn btn btn-dark position-absolute"
                             data-listing-id="{{ listing.id }}" style="top: 0.5rem; right: 0.5rem">
                             <i class="bi bi-heart"></i> <span id="likes-count-{{ listing.id }}">{{ listing.likes
@@ -67,9 +67,10 @@
         <!-- List entries Column -->
         <div class="col mb-5">
             <div class="card h-100">
-                <!-- Likes badge-->
-                <div class="badge bg-dark text-white position-absolute bi bi-heart" style="top: 0.5rem; right: 0.5rem">
-                    {{ listing.likes }}</div>
+                <!-- Likes Button-->
+                <button id="like-button-{{ listing.id }}" class="like-btn btn btn-dark position-absolute" data-listing-id="{{ listing.id }}" style="top: 0.5rem; right: 0.5rem">
+                    <i class="bi bi-heart"></i> <span id="likes-count-{{ listing.id }}">{{ listing.likes }}</span>
+                </button>
                 <!-- Product image-->
                 <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
                 <!-- Product details-->
