--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
 
                     <!-- Authentication Links -->
                     <!-- Right-aligned items for showing logged-in user's name -->
-                    <ul class="navbar-nav ms-auto">
+                    <ul class="navbar-nav">
                         {% if user.is_authenticated %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownUser" role="button"
