--- a/buy/templates/buy/index.html
+++ b/buy/templates/buy/index.html
@@ -21,7 +21,7 @@
                         <a href="{% url 'watch_detail' listing.slug %}">
                             {% with listing.images.first as image %}
                                 {% if image %}
-                                    <img class="card-img-top" src="{{ image.image.url }}" alt="{{ listing.title }}" style="max-height: 300px; width: auto; display: block; margin: 0 auto;">
+                                    <img class="card-img-top" src="{{ image.image.url }}" alt="{{ listing.title }}" style="max-height: 150px; max-width: 100px; display: block; margin: 0 auto;">
                                 {% else %}
                                     <img class="card-img-top" src="{% static 'img/placeholder-watch.webp' %}" alt="placeholder image" style="max-height: 300px; width: auto; display: block; margin: 0 auto;">
                                 {% endif %}
