--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,12 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <!-- Template CSS -->
+    <link rel="stylesheet" href="{% static 'css/template_styles.css' %}">
+    <!-- Custom css -->
+    <link rel="stylesheet" href="{% static 'css/custom_styles.css' %}">
+
+
 </head>
 
 <body>
@@ -47,8 +51,8 @@
                                 <hr class="dropdown-divider" />
                             </li>
                             {% endif %}
-                            <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                            <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
+                            <li><a class="dropdown-item" href="#!">Most Liked Listings</a></li>
+                            <li><a class="dropdown-item" href="#!">My Listings</a></li>
                         </ul>
                     </li>
                     <!-- Added About Page with Dynamic Active Class -->
@@ -81,11 +85,9 @@
     <div>
         {% if messages %}
         {% for message in messages %}
-        <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
+        <div class="custom-alert alert alert-dismissible fade show" role="alert">
             {{ message }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
         {% endfor %}
         {% endif %}
