--- a/buy/templates/buy/index.html
+++ b/buy/templates/buy/index.html
@@ -76,9 +76,9 @@
                     <div class="text-center">
                         <!-- Product name-->
                         <h5 class="fw-bolder">{{ listing.title }}</h5>
-                        <h7 class="">Seller: {{ listing.author }}</h7>
-                        <h7 class="">Time left: {{ listing.bid_timer }}</h7>
+                        <h7 class="">Seller: {{ listing.author.first_name }} {{ listing.author.last_name }}</h7>
                         <!-- Product price if statement to show "Price" if "current_bid" is null-->
+                        <hr>
                         {% if listing.current_bid %}
                         <span class="text-muted">€ {{ listing.current_bid }}</span>
                         {% else %}
