--- a/templates/base.html
+++ b/templates/base.html
@@ -51,8 +51,8 @@
                                 <hr class="dropdown-divider" />
                             </li>
                             {% endif %}
+                            <li><a class="dropdown-item" href="{% url 'my-listings' %}">My Listings</a></li>
                             <li><a class="dropdown-item" href="#!">Most Liked Listings</a></li>
-                            <li><a class="dropdown-item" href="#!">My Listings</a></li>
                         </ul>
                     </li>
                     <!-- Added About Page with Dynamic Active Class -->
